[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
url = "2.5.0"
